--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,13 +25,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Connie Playground</title>
-    <link href="flex.css" rel="stylesheet" />   
     <link href="base.css" rel="stylesheet" />   
+    <link href="flex.css" rel="stylesheet" />   
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script> 
   </head>
   <body>
+    
     <header class="main-header">
-      Connie Playground
+      <div class="name-logo">
+        <img class="logo" src="%PUBLIC_URL%/images/stock-logo2.png" alt="stock-logo">
+        <h1 class="name"><a href="#">Connie Playground of Stock Exchange</a></h1>       
+      </div>
     </header>
     <div id="root"></div>
     <footer>
@@ -52,5 +56,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
   </body>
 </html>
