change header and footer layout and fix socket re-render

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -33,18 +33,18 @@
     
     <header class="main-header">
       <div class="name-logo">
-        <img class="logo" src="%PUBLIC_URL%/images/stock-logo2.png" alt="stock-logo">
-        <h1 class="name"><a href="#">Connie Playground of Stock Exchange</a></h1>       
+        <img class="logo" src="%PUBLIC_URL%/images/stock-logo6.png" alt="stock-logo">
+        <h1 class="name"><a href="#">Stock Exchange</a></h1>       
       </div>
     </header>
     <div id="root"></div>
-    <footer>
-      <div class = "main-footer">copyright</div>
+    <footer class = "main-footer">
+      
       <ul class = "footer-info">
         <li><a>關於我們</a></li>
         <li><a>服務條款</a></li>
       </ul>
-      <span class="copyright">&copy;2021 Connie Playground.</span>
+      <span class="copyright">&copy; 2022 Connie Playground.</span>
     </footer>
     <!--
       This HTML file is a template.
