--- a/public/broker1.html
+++ b/public/broker1.html
@@ -51,6 +51,11 @@
         
       });
 
+      socket.on('kLine', function (kLineInfo) {
+        let currentTime = (+new Date());
+      setInterval((() => function ()), 60)
+      })
+
       
     </script>
 
