revise page layout

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -32,9 +32,11 @@
   <body>
     
     <header class="main-header">
-      <div class="name-logo">
-        <img class="logo" src="%PUBLIC_URL%/images/stock-logo6.png" alt="stock-logo">
-        <h1 class="name"><a href="#">Stock Exchange</a></h1>       
+      <div class="name-log-section">
+        <div class="name-logo">
+          <img class="logo" src="%PUBLIC_URL%/images/stock-logo6.png" alt="stock-logo">
+          <h1 class="name"><a href="#">Stock Exchange</a></h1>       
+        </div>
       </div>
     </header>
     <div id="root"></div>
@@ -44,7 +46,7 @@
         <li><a>關於我們</a></li>
         <li><a>服務條款</a></li>
       </ul>
-      <span class="copyright">&copy; 2022 Connie Playground.</span>
+      <span class="copyright">&copy; 2022 CONNIE PLAYGROUND</span>
     </footer>
     <!--
       This HTML file is a template.
