separate class from original matching logic and connect newOrder API

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -34,8 +34,8 @@
     <header class="main-header">
       <div class="name-log-section">
         <div class="name-logo">
-          <img class="logo" src="%PUBLIC_URL%/images/stock-logo6.png" alt="stock-logo">
-          <h1 class="name"><a href="#">Stock Exchange</a></h1>       
+          <img class="logo" src="%PUBLIC_URL%/images/stock-logo8.png" alt="stock-logo">
+          <h1 class="name"><a href="#">CONNIE PLAYGROUND of STOCK EXCHANGE</a></h1>       
         </div>
       </div>
     </header>
