create fiveTicks route

--- a/backend/public/broker1.html
+++ b/backend/public/broker1.html
@@ -22,7 +22,7 @@
     </form> -->
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
     <script>
-      let socket = io('/', {
+      let socket = io('https://connieplayground.site', {
         transports: ['websocket']
       });
       //https://connieplayground.site
