--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,20 +22,24 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Connie Playground</title>
-    <link href="base.css" rel="stylesheet" />   
-    <link href="flex.css" rel="stylesheet" />   
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script> 
-  </head>
-  <body>
-    
-    <header class="main-header">
-      <div class="name-log-section">
-        <div class="name-logo">
-          <img class="logo" src="%PUBLIC_URL%/images/stock-logo8.png" alt="stock-logo">
-          <h1 class="name"><a href="#">CONNIE PLAYGROUND of STOCK EXCHANGE</a></h1>       
-        </div>
+  <link href="base.css" rel="stylesheet" />
+  <link href="flex.css" rel="stylesheet" />
+  <link href="css/candleStick.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+</head>
+
+<body>
+  <header class="main-header">
+    <div class="name-log-section">
+      <div class="name-logo">
+        <img class="logo" src="%PUBLIC_URL%/images/stock-logo8.png" alt="stock-logo">
+        <h1 class="name"><a href="#">CONNIE PLAYGROUND of STOCK EXCHANGE</a></h1>
       </div>
     </header>
+    <div id="chart"></div>
+    <script src="js/candleStick.js"></script>
     <div id="root"></div>
     <footer class = "main-footer">
       
