--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,9 +28,14 @@
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+  <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js'></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+  
 </head>
 
 <body>
+
   <header class="main-header">
     <div class="name-log-section">
       <div class="name-logo">
