--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -44,7 +44,9 @@
         <h1 class="name"><a href="#">CONNIE PLAYGROUND of STOCK EXCHANGE</a></h1>
       </div>
     </header>
-    <div id="chart"></div>
+    <div class="chart-section">
+      <div id="chart"></div>
+    </div>
     <script src="js/candleStick.js"></script>
     <div id="root"></div>
     <footer class = "main-footer">
